# slap.core.semver

./: .flake8  pyproject.toml  readme.md
.github/workflows/: python-package.yml
src/slap/core/semver/: specifier.py  utils.py
tests/: test_import.py  test_specifier.py
