[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slap.core.semver"
version = "0.1.0"
description = "Provides a semver specifier to represent version constraints compatible with `packaging`."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "slap/core/semver", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
# "Bug Tracker" = ""
# Documentation = ""
# Homepage = ""
# Repository = ""

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "mypy src/"
pytest = "pytest test/ -vv"

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
