[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slap.core.semver"
version = "0.1.0"
description = "Provides a semver specifier to represent version constraints compatible with `packaging`."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "slap/core/semver", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-slap/slap.core.semver/issues"
# Documentation = ""
# Homepage = ""
Repository = "https://github.com/python-slap/slap.core.semver"

[tool.poetry.dependencies]
python = "^3.6"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "mypy src/"
pytest = "pytest tests/ -vv"
black = "black --check src/ tests/"
isort = "isort --check-only src/ tests"
flake8 = "flake8 src/ tests"

[tool.slap.run]
fmt = "black src/ tests/ && isort src/ tests/"

[tool.mypy]
python_version = "3.6"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
indent = "  "
